--- a/src/templates/inc/_nav.html
+++ b/src/templates/inc/_nav.html
@@ -6,9 +6,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-
-        <a class="nav-link" href="#">Features</a>
-
+        {% if user.is_authenticated %}
+          <a class="nav-link" href="{% url 'accounts:logout' %}">Вийти</a>
+        {% else %}
+          <a class="nav-link" href="{% url 'accounts:login' %}">Ввійти</a>
+        {% endif %}
       </div>
     </div>
   </div>
