--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,6 +13,7 @@
   <body>
     <div class="container">
       {% include "inc/_nav.html" %}
+      {% include "inc/_messages.html" %}
       {% block content %} {% endblock %}
     </div>
      <!-- Optional JavaScript; choose one of the two! -->
