--- a/src/templates/inc/_nav.html
+++ b/src/templates/inc/_nav.html
@@ -5,11 +5,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
           <a class="nav-link" href="{% url 'accounts:logout' %}">Вийти</a>
+          <a class="nav-link" href="{% url 'accounts:update' %}">Налаштування</a>
         {% else %}
           <a class="nav-link" href="{% url 'accounts:login' %}">Ввійти</a>
+          <a class="nav-link" href="{% url 'accounts:register' %}">Зареєструватися</a>
         {% endif %}
       </div>
     </div>
