Update urls, templates, views and fix run_scraping

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,8 +13,8 @@
   <body>
     <div class="container">
       {% include "inc/_nav.html" %}
-      {% include "inc/_messages.html" %}
       {% block content %} {% endblock %}
+<!--      {% include "inc/_footer.html" %}-->
     </div>
      <!-- Optional JavaScript; choose one of the two! -->
 
