--- a/src/accounts/templates/accounts/update.html
+++ b/src/accounts/templates/accounts/update.html
@@ -6,7 +6,9 @@
 
 <div class="row">
     <div class="col-md-6 mx-auto">
+        {% include "inc/_messages.html" %}
         <h2 class="my-4">Налаштування</h2>
+        <h6>Користувач {{ user_name }}</h6>
         <form action="" method="post">
             {% csrf_token %}
             <div class="form-group">
