--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -5,13 +5,59 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-md-6 mx-auto">
-        <h2 class="my-4">Сервіс для збору і розсилки вакансій</h2>
+    <div class="col-md-7">
+        {% include "inc/_messages.html" %}
+        {% for obj in object_list %}
+        <div class="card my-5">
+            <div class="card-header">
+                <h5><a href="{{ obj.url }}">{{ obj.title }}</a></h5>
+            </div>
+            <div class="card-body">
+                <h4> {{ obj.company }} </h4>
+                <p class="card-text">{{ obj.description }}</p>
+                <p>{{ obj.city.name }} | {{ obj.program_language.name }} | {{ obj.timestamp|date:"d-m-Y"}}</p>
+            </div>
+        </div>
+        {% endfor %}
+        {% if object_list %}
+        <div class="row">
+            <div class="col ">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        {% if object_list.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ object_list.previous_page_number }}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+
+                        {% for page in object_list.paginator.page_range %}
+                        <li class="page-item {% if page == object_list.number %} active {% endif %}">
+                            <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ page }}"> {{ page }} </a>
+                        </li>
+                        {% endfor %}
+
+                        {% if object_list.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ object_list.next_page_number }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        {% endif %}
+    </div>
+    <div class="col-md-4 mx-auto">
+        <h2 class="my-4">Сервіс для пошуку вакансій по Україні</h2>
         <hr>
         <p class="my-3">Для перегляду вакансій заповніть форму по одному з полів(або дваох)</p>
-        <form action="{% url 'list' %}" method="get" >
+        <form action="{% url 'scraping:list' %}" method="get" >
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Find</button>
+            <button type="submit" class="btn btn-primary">Знайти</button>
         </form>
     </div>
 </div>
