--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -5,12 +5,12 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-md-6 mx-auto">
+    <div class="col-md-4 mx-auto">
         <h2 class="my-4">Login</h2>
         <form action="" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary col-md-12">Login</button>
         </form>
     </div>
 </div>
