--- a/src/accounts/templates/accounts/register.html
+++ b/src/accounts/templates/accounts/register.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
-{% block title%} Login {% endblock %}
+{% block title%} Register {% endblock %}
 
 {% block content %}
 
 <div class="row">
-    <div class="col-md-6 mx-auto">
+    <div class="col-md-4 mx-auto">
         <h2 class="my-4">Реєстрація</h2>
         <form action="" method="post">
             {% csrf_token %}
             <div class="form-group">
                 {{ form.as_p }}
             </div>
-            <button type="submit" class="btn btn-primary">Зареєструватися</button>
+            <button type="submit" class="btn btn-primary col-md-12">Зареєструватися</button>
         </form>
     </div>
 </div>
