--- a/src/templates/inc/_nav.html
+++ b/src/templates/inc/_nav.html
@@ -1,19 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'scraping:home' %}">Пошук вакансій</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        {% if user.is_authenticated %}
-          <a class="nav-link" href="{% url 'accounts:logout' %}">Вийти</a>
-          <a class="nav-link" href="{% url 'accounts:update' %}">Налаштування</a>
-        {% else %}
-          <a class="nav-link" href="{% url 'accounts:login' %}">Ввійти</a>
-          <a class="nav-link" href="{% url 'accounts:register' %}">Зареєструватися</a>
-        {% endif %}
-      </div>
+  <div class="container-fluid d-flex justify-content-between">
+    <div><a class="navbar-brand" href="{% url 'scraping:home' %}">Пошук вакансій</a></div>
+    <div class="navbar-nav">
+      {% if user.is_authenticated %}
+      <a class="nav-link" href="{% url 'accounts:update' %}">Налаштування</a>
+      <a class="nav-link" href="{% url 'accounts:logout' %}">Вийти</a>
+      {% else %}
+      <a class="nav-link" href="{% url 'accounts:login' %}">Ввійти</a>
+      <a class="nav-link" href="{% url 'accounts:register' %}">Зареєструватися</a>
+      {% endif %}
     </div>
   </div>
 </nav>
