--- a/src/accounts/templates/accounts/register.html
+++ b/src/accounts/templates/accounts/register.html
@@ -5,14 +5,14 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-md-4 mx-auto">
-        <h2 class="my-4">Реєстрація</h2>
-        <form action="" method="post">
+    <div class="col-md-4 mt-5 p-3 rounded mx-auto" style="background-color: #CEAB93">
+        <h2 class="my-4" style="color: #F9F2ED">Реєстрація</h2>
+        <form action="" method="post" style="color: #F9F2ED">
             {% csrf_token %}
             <div class="form-group">
                 {{ form.as_p }}
             </div>
-            <button type="submit" class="btn btn-primary col-md-12">Зареєструватися</button>
+            <button type="submit" class="btn col-md-12" style="background-color: #AD8B73; color: #F9F2ED">Зареєструватися</button>
         </form>
     </div>
 </div>
