--- a/src/templates/inc/_nav.html
+++ b/src/templates/inc/_nav.html
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark rounded" style="background-color: #AD8B73">
   <div class="container-fluid d-flex justify-content-between">
-    <div><a class="navbar-brand" href="{% url 'scraping:home' %}">Пошук вакансій</a></div>
+    <div><a class="navbar-brand" href="{% url 'scraping:home' %}" id="brand">Vacancies Finder</a></div>
     <div class="navbar-nav">
       {% if user.is_authenticated %}
+      <a class="nav-link" href="{% url 'scraping:home' %}">Пошук</a>
       <a class="nav-link" href="{% url 'accounts:update' %}">Налаштування</a>
       <a class="nav-link" href="{% url 'accounts:logout' %}">Вийти</a>
       {% else %}
