--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -31,23 +31,34 @@
                     <ul class="pagination">
                         {% if object_list.has_previous %}
                         <li class="page-item">
+                            <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page=1"> First </a>
+                        </li>
+                        <li class="page-item">
                             <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ object_list.previous_page_number }}" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
+                                Previous
                             </a>
                         </li>
                         {% endif %}
-
                         {% for page in object_list.paginator.page_range %}
+                        {% if object_list.number == page %}
                         <li class="page-item {% if page == object_list.number %} active {% endif %}">
                             <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ page }}"> {{ page }} </a>
                         </li>
+                        {% elif page > object_list.number|add:'-7' and page < object_list.number|add:'7' %}
+                        <li class="page-item">
+                            <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ page }}"> {{ page }} </a>
+                        </li>
+                        {% endif %}
                         {% endfor %}
 
                         {% if object_list.has_next %}
                         <li class="page-item">
                             <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ object_list.next_page_number }}" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
+                                <span aria-hidden="true">Next</span>
                             </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?city={{ city }}&program_language={{ program_language }}&page={{ object_list.paginator.num_pages }}"> Last </a>
                         </li>
                         {% endif %}
                     </ul>
